--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </div>
         </div>
     </main>
-        
-    <script type="module" src="app.js"></script>
+    
+    <script type="module" src="./scripts/app.js"></script>
 </body>
 
 </html>
